created login page

--- a/WebApp/templates/home.html
+++ b/WebApp/templates/home.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask Tutorial</title>
+    <title>RFID Scanner</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
   </head>
   <body>
-    {% extends "template.html" %}
     {% block content %}
-    
-    <h1> My First Try Using Flask </h1>
-    <p> Flask is Fun </p>
-    
+    <h1> Welcome to the RFID Scanner </h1>
+    <p> Start checking on your students! </p>
+    <li><a href="{{ url_for('login') }}">Login</a></li>
     {% endblock %}
   </body>
 </html>
