--- a/WebApp/templates/login.html
+++ b/WebApp/templates/login.html
@@ -15,7 +15,7 @@
         <input class="btn" type="submit" value="Login">
       </form>
       {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
+        <p class="error"><strong>Error:</strong> {{ error }} </p>
       {% endif %}
     </div>
   </body>
