working rendering of ugly interactive calendar

--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -1,72 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Calendar Example</title>
-  </head>
-  <body>
-    <h1>Calendar Example</h1>
-    <table>
-      <thead>
-        <tr>
-          <th colspan="7">March 2023</th>
-        </tr>
-        <tr>
-          <th>Sun</th>
-          <th>Mon</th>
-          <th>Tue</th>
-          <th>Wed</th>
-          <th>Thu</th>
-          <th>Fri</th>
-          <th>Sat</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>5</td>
-          <td>6</td>
-          <td>7</td>
-          <td>8</td>
-          <td>9</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <td>11</td>
-          <td>12</td>
-          <td>13</td>
-          <td>14</td>
-          <td>15</td>
-          <td>16</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>18</td>
-          <td>19</td>
-          <td>20</td>
-          <td>21</td>
-          <td>22</td>
-          <td>23</td>
-          <td>24</td>
-        </tr>
-        <tr>
-          <td>25</td>
-          <td>26</td>
-          <td>27</td>
-          <td>28</td>
-          <td>29</td>
-          <td>30</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <title>Interactive Calendar</title>
+</head>
+<body onload="renderCalendar()">
+  <h1>Interactive Calendar</h1>
+  <label for="year">Select a year:</label>
+  <select id="year" onchange="renderCalendar()">
+    <option value="2021">2021</option>
+    <option value="2022">2022</option>
+    <option value="2023">2023</option>
+  </select>
+  <div id="calendar-container"></div>
+</body>
 </html>
