--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   <title>Interactive Calendar</title>
 </head>
 <body onload="renderCalendar()">
