made sure correct CSS file is used

--- a/WebApp/templates/login.html
+++ b/WebApp/templates/login.html
@@ -25,7 +25,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>RFID Scanner - Login Page</title>
   </head>
   <body>
