working nicer look of login page

--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/calendar.css') }}">
+  <script src="{{ url_for('static', filename='js/calendar.js') }}"></script>
   <title>Interactive Calendar</title>
 </head>
 <body onload="renderCalendar()">
