--- a/WebApp/templates/login.html
+++ b/WebApp/templates/login.html
@@ -1,31 +1,8 @@
-<!-- <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
-    <title>RFID Scanner - Login Page</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Please Login</h1>
-      <br>
-      <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{ request.form.username }}">
-        <input type="password" placeholder="Password" name="password" value="{{ request.form.password }}">
-        <input class="btn" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }} </p>
-      {% endif %}
-    </div>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
     <title>RFID Scanner - Login Page</title>
   </head>
   <body>
