--- a/WebApp/static/css/login.css
+++ b/WebApp/static/css/login.css
@@ -1,81 +1,6 @@
-/* body {
+body {
     font-family: Arial, sans-serif;
-    background-color: #F0E68C;
-  }
-  
-  h1 {
-    color: #005030;
-  }
-  
-  label, #year {
-    color: #005030;
-  }
-  
-  #calendar-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  .calendar {
-    background-color: #F0E68C;
-    border: 2px solid #005030;
-    padding: 10px;
-    width: 200px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .calendar h2 {
-    color: #005030;
-    margin: 0;
-    text-align: center;
-  }
-  
-  .calendar-grid {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 2px;
-    margin-top: 10px;
-    flex-grow: 1;
-  }
-  
-  .calendar-day {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #005030;
-  }
-  
-  .calendar-day.today {
-    background-color: #005030;
-    color: #F0E68C;
-  }
-  
-  .days-of-week {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 2px;
-    margin-top: 5px;
-  }
-  
-  .day-of-week {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #005030;
-    font-weight: bold;
-  } */
-
-  body {
-    font-family: Arial, sans-serif;
-    background-image: url('palm-tree-background.jpg');
+    background-image: url('images/palm-tree-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
