--- a/WebApp/static/css/login.css
+++ b/WebApp/static/css/login.css
@@ -1,23 +1,61 @@
+html *
+{
+  font-family: Candara !important;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-image: url('images/palm-tree-background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: linear-gradient(-45deg, #3D3584, #5F6FD9, #3D28A8, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 20s ease infinite;
+    height: 100vh;
+    margin: 0;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.slider-thumb::before {
+  position: absolute;
+  content: "";
+  left: 28%;
+  top: 20%;
+  width: 500px;
+  height: 500px;
+  background: #C5C0DE;
+  border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
+  will-change: border-radius, transform, opacity;
+  animation: sliderShape 15s linear infinite;
+  display: block;
+  z-index: -1;
+  -webkit-animation: sliderShape 15s linear infinite;
+}
+@keyframes sliderShape{
+  0%,100%{
+  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
+    transform: translate3d(0,0,0) rotateZ(0.01deg);
   }
-  
-  .banner {
-    font-family: 'Arial';
-    font-size: 24px;
-    text-align: center;
-    padding: 20px;
-    background-color: #9370DB;
-    color: #FFF;
-    width: 50%;
-    margin: 20px auto 40px auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    animation: fadeIn 5s;
+  34%{
+      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
+    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
   }
+  50%{
+    transform: translate3d(0,0,0) rotateZ(0.01deg);
+  }
+  67%{
+    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
+    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
+  }
+}
+ 
   
   @keyframes fadeIn {
     0% {
@@ -30,14 +68,6 @@ body {
     }
   }
   
-  .container {
-    width: 350px;
-    background-color: white;
-    border-radius: 10px;
-    padding: 30px;
-    margin: 0 auto;
-    box-shadow: 0 4px 6px rgb(147,112,219);
-  }
   
   h1 {
     color: #9370DB;
@@ -77,3 +107,13 @@ body {
     font-size: 14px;
     margin-top: 10px;
   }
+
+.login-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  text-align: center;
+  z-index: 1;
+}
