--- a/WebApp/templates/login.html
+++ b/WebApp/templates/login.html
@@ -8,6 +8,7 @@
   <body>
     <div class="typewriter">
     <div class="container">
+      <div class="slider-thumb2"></div>
       <div class="slider-thumb">
         <div class="login-container">
           <h1>Login to View your Attendance</h1>
