--- a/WebApp/templates/home.html
+++ b/WebApp/templates/home.html
@@ -2,12 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
-    <title>RFID Scanner</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <title>RFID University Attendance System</title>
   </head>
   <body>
-    <h1> Welcome to the RFID Scanner </h1>
-    <p> Start checking on your students! </p>
-    <li><a href="{{ url_for('login') }}">Login</a></li>
+    <div class="slider-thumb2">
+      <div class="slider-thumb">
+    <div class="slider-thumb::before"></div>
+    <div class="login-container">
+      <h1>Welcome to iNeedNames</h1>
+      <p>Start reviewing your attendance data today!</p>
+      <div class="button-container">
+        <a href="{{ url_for('login') }}" class="button login-btn">Login</a>
+        <a href="{{ url_for('register') }}" class="button register-btn">Register</a>
+      </div>
+    </div>
   </body>
 </html>
