added functions that get the classes of the day selected on click. functions are untested since there are no sql tables yet created

--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -8,7 +8,7 @@
     <title>Interactive Calendar</title>
   </head>
   <body onload="renderCalendar()">
-    <input type="hidden" id="instructor-id" value="{{ instructorId }}">
+    <input type="hidden" id="instructor-id" value="{{ instructor }}">
     <input type="hidden" id="start-day" value="{{ sd }}">
     <input type="hidden" id="end-day" value="{{ ed }}">
     <h1>Interactive Calendar</h1>
