final website theme. added to homepage

--- a/WebApp/templates/home.html
+++ b/WebApp/templates/home.html
@@ -11,10 +11,9 @@
     <div class="slider-thumb::before"></div>
     <div class="login-container">
       <h1>Welcome to iNeedNames</h1>
-      <p>Start reviewing your attendance data today!</p>
+      <p>View your class attendance data today!</p>
       <div class="button-container">
         <a href="{{ url_for('login') }}" class="button login-btn">Login</a>
-        <a href="{{ url_for('register') }}" class="button register-btn">Register</a>
       </div>
     </div>
   </body>
