--- a/WebApp/static/css/home.css
+++ b/WebApp/static/css/home.css
@@ -1,4 +1,5 @@
-html * {
+html *
+{
   font-family: Candara !important;
 }
 
@@ -51,82 +52,6 @@ margin: 0;
   -webkit-animation: sliderShape 20s linear infinite;
 }
 
-@keyframes sliderShape {
-  0%, 100% {
-    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
-    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
-  }
-  34% {
-    border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
-    transform: translate3d(0, 5px, 0) rotateZ(0.01deg);
-  }
-  50% {
-    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
-  }
-  67% {
-    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
-    transform: translate3d(0, -3px, 0) rotateZ(0.01deg);
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-h1 {
-  color: #005030;
-  text-align: center;
-  animation: fadeIn 1s ease-in-out;
-}
-
-p {
-  color: #005030;
-  text-align: center;
-  animation: fadeIn 1s ease-in-out 0.5s;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  animation: fadeIn 1s ease-in-out 1s;
-}
-
-.button {
-  display: inline-block;
-  padding: 10px 25px;
-  font-size: 16px;
-  text-decoration: none;
-  color: white;
-  background-color: #F47321;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.button:hover {
-  background-color: #F47321;
-}
-
-.login-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 350px;
-  text-align: center;
-  z-index: 1;
-}
-
 @keyframes sliderShape{
   0%,100%{
   border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
@@ -143,4 +68,66 @@ p {
     border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
     transform: translate3d(0,-3px,0) rotateZ(0.01deg);
   }
+}
+ 
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  
+  h1 {
+    color: #005030;
+    text-align: center;
+  }
+  
+  input[type="text"], input[type="password"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  input[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #F47321;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #9370DB;
+  }
+  
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+.login-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  text-align: center;
+  z-index: 1;
 }
