--- a/WebApp/templates/home.html
+++ b/WebApp/templates/home.html
@@ -2,18 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <title>RFID University Attendance System</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    <title>RFID Scanner - Login Page</title>
   </head>
   <body>
-    <div class="slider-thumb2">
+    <div class="typewriter">
+    <div class="container">
+      <div class="slider-thumb2"></div>
       <div class="slider-thumb">
-    <div class="slider-thumb::before"></div>
-    <div class="login-container">
-      <h1>Welcome to iNeedNames</h1>
-      <p>View your class attendance data today!</p>
-      <div class="button-container">
-        <a href="{{ url_for('login') }}" class="button login-btn">Login</a>
+        <div class="login-container">
+          <h1>Login to View your Attendance</h1>
+          <form action="" method="post">
+            <input type="text" placeholder="Username" name="username" value="{{ request.form.username }}">
+            <input type="password" placeholder="Password" name="password" value="{{ request.form.password }}">
+            <input class="btn" type="submit" value="Login">
+          </form>
+          {% if error %}
+            <p class="error"><strong>Error:</strong> {{ error }} </p>
+          {% endif %}
+        </div>
       </div>
     </div>
   </body>
