--- a/WebApp/static/css/home.css
+++ b/WebApp/static/css/home.css
@@ -114,7 +114,8 @@ p {
 }
 
 .button:hover {
-  background-color: #F47321;
+   background-color: white;
+  color: #005030;
 }
 
 .login-container {
@@ -126,6 +127,7 @@ p {
   text-align: center;
   z-index: 1;
 }
+
 
 @keyframes sliderShape{
   0%,100%{
@@ -162,8 +164,7 @@ p {
 
 .btn-author-info:hover {
   background-color: white;
-  color: #4CAF50;
-  border: 2px solid #4CAF50;
+  color: #005030;
 }
 
 .modal {
