--- a/WebApp/static/css/calendar.css
+++ b/WebApp/static/css/calendar.css
@@ -78,4 +78,23 @@ color: #005030;
 font-weight: bold;
 }
 
+.table {
+    display: table;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .column {
+    display: table-cell;
+    width: 50%;
+    padding: 10px;
+    vertical-align: middle;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    border: 1px solid black;
+  }
+  
+  
+  
   
