creating new function to fill attendances tables with fake data [NOT COMPLETE]

--- a/WebApp/static/css/calendar.css
+++ b/WebApp/static/css/calendar.css
@@ -31,11 +31,11 @@ margin: 0;
 }
 
 h1 {
-color: #005030;
+color: #FFFFFF;
 }
 
 label, #year {
-color: #005030;
+color: #FFFFFF;
 }
 
 #calendar-container {
