added buttons showing classes

--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -36,6 +36,10 @@
         {% endfor %}
       </select>
     </div>
+    <div>
+      <div id="courses-container"></div>
+    </div>
+    <div>
       <div id="calendar-container"></div>
     </div>
     <div>
