--- a/WebApp/templates/calendar.html
+++ b/WebApp/templates/calendar.html
@@ -1,19 +1,94 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/calendar.css') }}">
-  <script src="{{ url_for('static', filename='js/calendar.js') }}"></script>
-  <title>Interactive Calendar</title>
-</head>
-<body onload="renderCalendar()">
-  <h1>Interactive Calendar</h1>
-  <label for="year">Select a year:</label>
-  <select id="year" onchange="renderCalendar()">
-    <option value="2021">2021</option>
-    <option value="2022">2022</option>
-    <option value="2023">2023</option>
-  </select>
-  <div id="calendar-container"></div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/calendar.css') }}">
+    <script src="{{ url_for('static', filename='js/calendar.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Interactive Calendar</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+      }
+      h1 {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 36px;
+        color: #ffffff;
+        margin-top: 50px;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+      label {
+			font-family: Arial, sans-serif;
+			font-size: 16px;
+			color: #ffffff;
+			margin-top: 10px;
+			margin-bottom: 5px;
+			display: block;
+		}
+    
+    .select-container {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 5px;
+        background-color: #f5f5f5;
+    }
+    
+    #academic-year, #semester {
+        width: 8%;
+        padding: 5px;
+        border: none;
+        border-radius: 3px;
+        font-size: 16px;
+        font-family: Arial, sans-serif;
+        color: #333;
+        background-color: rgba(255, 255, 255, 0.7);
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    }
+    
+    #calendar-container {
+        margin: 20px;
+    }
+
+    </style>
+  </head>
+  <body onload="renderCalendar()">
+    <input type="hidden" id="instructor-id" value="{{ instructor }}">
+    <input type="hidden" id="start-day" value="{{ sd }}">
+    <input type="hidden" id="end-day" value="{{ ed }}">
+    <h1> Interactive Calendar</h1>
+    <div>
+      <label for="academic-year">Select an academic year:</label>
+      <select id="academic-year" onchange="getSemesterList()">
+        {% for academicYear in academicYearList %}
+          {% if academicYear == ay %}
+            <option value="{{ academicYear }}" selected>{{ academicYear }}</option>
+          {% else %}
+            <option value="{{ academicYear }}">{{ academicYear }}</option>
+          {% endif %}
+        {% endfor %}
+      </select>
+    </div> 
+    <div>
+      <label for="semester">Select a semester:</label>
+      <select id="semester" onchange="getSemesterDates();">
+        {% for semester in semesterList %}
+          {% if semester == s %}
+            <option value="{{ semester }}" selected>{{ semester }}</option>
+          {% else %}
+            <option value="{{ semester }}">{{ semester }}</option>
+          {% endif %}
+        {% endfor %}
+      </select>
+    </div>
+      <div id="calendar-container"></div>
+    </div>
+    <div>
+      
+      <div id="attendance-container" style="background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)); color: #005030; padding: 10px; border: 1px solid black; font-family: 'Helvetica Neue', sans-serif; text-align: center;">Select an academic year and semester to load your attendance data.</div>
+    </div>
+  </body>
 </html>
